--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         </li>
     </ul>
 
+    <h1>test point .</h1>
+
+    <ol>
+        <li>test li .</li>
+    </ol>
     <script src="script.js"></script>
 </body>
 
